--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.9.4",
+    "axios": "^1.5.1",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -30,6 +33,7 @@
     "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "prettier": "^3.0.2",
+    "sass": "^1.69.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
