--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "antd": "^5.9.4",
     "axios": "^1.5.1",
-    "eslint-config-airbnb-typescript": "^17.1.0",
+    "i18next": "22.4.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "12.2.0",
     "react-router-dom": "^6.16.0",
     "swiper": "^10.3.1"
   },
